net/bmon: version 3.2

--- a/net/bmon/HISTORY
+++ b/net/bmon/HISTORY
@@ -1,3 +1,10 @@
+2014-04-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.2
+	* DEPENDS: remove optional dependencies, add dependencies on libnl
+	  and confuse
+	* bmon-2.1.0-gcc4.diff: removed
+	* PRE_BUILD: run autogen.sh
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
