--- a/libs/icu/HISTORY
+++ b/libs/icu/HISTORY
@@ -1,3 +1,6 @@
+2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 53.1 (both)
+
 2013-11-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: icu fails to build with clang++
 	  => force configure to use gcc
