--- a/python-pypi/pyicu/HISTORY
+++ b/python-pypi/pyicu/HISTORY
@@ -1,3 +1,6 @@
+2014-04-04  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6
+
 2013-04-16  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix python usage
 
