--- a/mail/sylpheed/HISTORY
+++ b/mail/sylpheed/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.4.1
+
 2014-04-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.4.0
 
