--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on UDEV instead of udev
+
 2014-04-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.9.4
 
