--- a/libs/libusb/HISTORY
+++ b/libs/libusb/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on UDEV instead of udev
+
 2014-02-27 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: optional dependency on udev
 
