--- a/utils/hal/HISTORY
+++ b/utils/hal/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on UDEV instead of udev
+
 2013-08-13 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Apply glibc-2.17.patch
 	* glibc-2.17.patch: Added from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=701432
