--- a/x11/unclutter/HISTORY
+++ b/x11/unclutter/HISTORY
@@ -1,3 +1,7 @@
+2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on imake, libx11 and libxext
+	* DETAILS: fix SOURCE_URL[0]
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
