gnu.gpg : add D7E69871: Daiki Ueno

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-05  Treeve Jelbert <treeve@sourcemage.org>
+	* gnu.gpg: add D7E69871 "Daiki Ueno <ueno@unixuser.org>
+
 2014-04-01 Vlad Glagolev <stealth@sourcemage.org>
 	* utils/gstpw: new spell, simple GTK+2 stopwatch program
 
