--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.18.3.2
+
 2013-08-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.18.3.1
 
