--- a/gnome2-libs/at-spi2-core/HISTORY
+++ b/gnome2-libs/at-spi2-core/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.12.0
+
 2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.10.2
 
