--- a/libs/libverto/HISTORY
+++ b/libs/libverto/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.6
+
 2013-04-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.5
 
