--- a/audio-players/deadbeef/HISTORY
+++ b/audio-players/deadbeef/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6.1; updated descriptions
+
 2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.6.0
 	* CONFIGURE: added missing config options
