--- a/xfce/ristretto/HISTORY
+++ b/xfce/ristretto/HISTORY
@@ -1,3 +1,6 @@
+2014-04-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: renewed dependencies
+
 2012-11-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added tumbler suggest dep
 
