--- a/shell-term-fm/mc/HISTORY
+++ b/shell-term-fm/mc/HISTORY
@@ -1,3 +1,7 @@
+2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.8.12
+	* PRE_BUILD, mc-4.8.11-ncurses_build_fix.patch: deleted
+
 2014-01-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, mc-4.8.11-ncurses_build_fix.patch: fix incompatibility
 	  with ncurses, patch from gentoo
