--- a/devel/libunwind/HISTORY
+++ b/devel/libunwind/HISTORY
@@ -1,2 +1,5 @@
+2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS, BUILD: fixed syntax error
+
 2009-04-21 Ethan Grammatikidis <eekee57@fastmail.fm>
-	* DETAILS, BUILD: Crated spell.
+	* DETAILS, BUILD: Created spell.
