--- a/database/redis/HISTORY
+++ b/database/redis/HISTORY
@@ -1,3 +1,6 @@
+2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.17; updated source url
+
 2013-06-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.13
 
