--- a/editors/code-browser/HISTORY
+++ b/editors/code-browser/HISTORY
@@ -1,3 +1,6 @@
+2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.9 (4)
+
 2013-07-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.7 (4)
 
