--- a/database/mongodb/HISTORY
+++ b/database/mongodb/HISTORY
@@ -1,3 +1,17 @@
+2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.10
+	* DEPENDS: added missing dependencies
+	* CONFIGURE: added, to select between js engines and concurrency levels
+	* PRE_BUILD: sed -i -> sedit
+	* INSTALL: install run dir for mongos daemon
+	* FINAL: added, notify SA about spell branch updates
+	* init.d/mongodb: added stop() for clean shutdown
+	* init.d/mongos: added, init script for mongos (sharding daemon)
+	* fips.patch: added, to fix build against OpenSSL without FIPS support
+	  (official patch 51a0bf4)
+	* scons.patch: added, to respect CXX/LD flags
+	* boost150.patch.gz: dropped, fixed by upstream
+
 2013-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply patch
 	* boost150.patch.gz: added, to fix build with boost 1.50+
