--- a/database/mongodb/INSTALL
+++ b/database/mongodb/INSTALL
@@ -1,8 +1,9 @@
-scons --prefix="$INSTALL_ROOT/usr" --full install &&
+scons install --prefix="$INSTALL_ROOT/usr" --full $OPTS &&
 
 if [[ $INIT_INSTALLED ]]; then
   install_config_file "$SPELL_DIRECTORY/init.d/mongodb.conf" \
                       "$INSTALL_ROOT/etc/sysconfig/mongodb"
 fi &&
 
-install -d -o mongodb -g mongodb -vm 755 "$INSTALL_ROOT/var/run/mongod"
+install -d -o mongodb -g mongodb -vm 755 "$INSTALL_ROOT/var/run/mongod" \
+                                         "$INSTALL_ROOT/var/run/mongos"
