--- a/xorg-lib/libxft/HISTORY
+++ b/xorg-lib/libxft/HISTORY
@@ -1,3 +1,7 @@
+2014-04-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0001-fix-freetype-include-path.patch: fix include
+	  path for freetype headers
+
 2012-06-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.3.1
 
