python-pypi/pillow: version 2.4.0

--- a/python-pypi/pillow/HISTORY
+++ b/python-pypi/pillow/HISTORY
@@ -1,3 +1,6 @@
+2014-04-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.4.0
+
 2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, font.diff, PRE_BUILD, PRE_SUB_DEPENDS, PROVIDES,
 	  SUB_DEPENDS: spell created
