--- a/mail/bogofilter/HISTORY
+++ b/mail/bogofilter/HISTORY
@@ -1,3 +1,7 @@
+2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.4
+	* CONFIGURE: upstream removed qdbm support
+
 2012-12-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.3
 	  SECURITY_PATCH=1 fixes CVE-2012-5468
