--- a/graphics/leptonica/HISTORY
+++ b/graphics/leptonica/HISTORY
@@ -1,3 +1,7 @@
+2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.70
+	  new website & url
+
 2012-10-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.69
 
