--- a/python-pypi/bsddb3/HISTORY
+++ b/python-pypi/bsddb3/HISTORY
@@ -1,3 +1,7 @@
+2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.0.1
+	  LICENSE[0]=BSD 
+
 2013-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.0.0
 
