--- a/audio-libs/taglib/HISTORY
+++ b/audio-libs/taglib/HISTORY
@@ -1,3 +1,7 @@
+2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9.1
+	  new URL
+
 2012-10-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8
 	  new URL
