--- a/devel/flex/HISTORY
+++ b/devel/flex/HISTORY
@@ -1,3 +1,6 @@
+2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.5.39
+
 2012-08-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.5.37
 
