--- a/utils/desktop-file-utils/HISTORY
+++ b/utils/desktop-file-utils/HISTORY
@@ -1,3 +1,6 @@
+204-04-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.22
+
 2013-05-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.21
 
