archive/upx: version 3.91

--- a/archive/upx/HISTORY
+++ b/archive/upx/HISTORY
@@ -1,3 +1,9 @@
+2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.91, remove SOURCE2
+	* BUILD, INSTALL: adapt to current Makefile
+	* PRE_BUILD, 0001-use-system-ucl.patch: use system ucl
+	* DEPENDS: add dependency on gcc and ucl
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
