--- a/archive/upx/INSTALL
+++ b/archive/upx/INSTALL
@@ -1,4 +1,4 @@
-cp ${SOURCE_DIRECTORY}/src/upx ${INSTALL_ROOT}/usr/bin/upx
+install -m755 ${SOURCE_DIRECTORY}/src/upx.out ${INSTALL_ROOT}/usr/bin/ &&
 
 if spell_installed perl; then
    cp ${SOURCE_DIRECTORY}/doc/upx.1 ${INSTALL_ROOT}/usr/share/man/man1/
