mariadb: added branch 5.5

--- a/database/mariadb/INSTALL
+++ b/database/mariadb/INSTALL
@@ -1,13 +1,17 @@
-make benchdir_root="${TRACK_ROOT}/usr/share/mysql" \
-     testroot="${TRACK_ROOT}/usr/share/mysql" \
-     install &&
+if [[ $MARIADB_BRANCH == 5.5 ]]; then
+  default_install
+else
+  make benchdir_root="${TRACK_ROOT}/usr/share/mysql" \
+       testroot="${TRACK_ROOT}/usr/share/mysql" \
+       install &&
 
-if [[ $MARIA_TESTS == n ]]; then
+  if [[ $MARIA_TESTS == n ]]; then
     rm -rf "${INSTALL_ROOT}/usr/share/mysql/mysql-test"
-fi &&
+  fi &&
 
-if [[ $MARIA_BENCH == n ]]; then
-    rm -fr "${INSTALL_ROOT}/usr/share/mysql/sql-bench"
+  if [[ $MARIA_BENCH == n ]]; then
+    rm -rf "${INSTALL_ROOT}/usr/share/mysql/sql-bench"
+  fi
 fi &&
 
 if [[ $INIT_INSTALLED ]]; then
