--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,17 @@
+2014-04-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS, PREPARE: added 5.5 branch
+	* CONFIGURE: renamed lists MADB_* -> MARIADB_*; added missing charsets;
+	  split engines list for different branches
+	* DEPENDS: added bison dependency; added cmake (optional) and libaio,
+	  boost for 5.5 branch
+	* BUILD: cmake build for 5.5 branch; use MARIADB_OPTS
+	* INSTALL: added target for 5.5 branch
+	* PRE_BUILD: added check for 5.5 branch; renamed mysqld user mysql ->
+	  mariadb
+	* FINAL: fixed syntax error; added check for 5.5 branch
+	* {PRE_,}SUB_DEPENDS: rewritten; echo -> message
+	* REPAIR^all^PRE_SUB_DEPENDS: added
+
 2013-02-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: added 5.3 branch; PATCHLEVEL=1 for 5.2 branch to set
 	  MARIADB_BRANCH in tablet for further usage; updated website
