libs/libtcod: new spell, a library for developing roguelike games

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* libs/libtcod: new spell, a library for developing roguelike games
+
 2014-04-05  Treeve Jelbert <treeve@sourcemage.org>
 	* gnu.gpg: add D7E69871 "Daiki Ueno <ueno@unixuser.org>
 
