--- a/libs/newt/HISTORY
+++ b/libs/newt/HISTORY
@@ -1,3 +1,6 @@
+2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.52.17
+
 2011-08-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.52.13
 
