libs/cdk: version 5.0-20140118

--- a/libs/cdk/HISTORY
+++ b/libs/cdk/HISTORY
@@ -1,3 +1,6 @@
+2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.0-20140118
+
 2012-06-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.0-20120323
 	* INSTALL: make cdk5-config executable
