--- a/doc/docx2txt/HISTORY
+++ b/doc/docx2txt/HISTORY
@@ -1,3 +1,6 @@
+2014-04-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3
+
 2012-01-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2
 	* INSTALL: fix BINDIR
