--- a/graphics/lcms2/HISTORY
+++ b/graphics/lcms2/HISTORY
@@ -1,3 +1,6 @@
+2014-04-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.6
+
 2013-07-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5
 
