--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,6 @@
+2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
+	* UP_TRIGGERS: update triggers for switching between branches
+
 2014-04-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, PREPARE: added 5.5 branch
 	* CONFIGURE: renamed lists MADB_* -> MARIADB_*; added missing charsets;
