--- a/database/tdb/HISTORY
+++ b/database/tdb/HISTORY
@@ -1,3 +1,7 @@
+2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.13
+	* DEPENDS: added gettext optional dependency
+
 2013-06-06 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: 1.2.12
 
