samba: => 3.6.23 [security] (cherry picked from commit a9d0b4c3b41ed581a4b80a2bc6ab4dda116f921b)

--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,8 @@
+2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.6.23; SECURITY_PATCH++ (CVE-2013-4496)
+	* DEPENDS: depends pkgconfig
+	* BUILD: pass pkg-config script's path to properly locate tdb and talloc
+
 2013-12-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6.22, SECURITY_PATCH=21, CVE-2013-4408 and CVE-2012-6150
 
