--- a/python-pypi/virtualenv/HISTORY
+++ b/python-pypi/virtualenv/HISTORY
@@ -1,3 +1,7 @@
+2014-04-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.11.4
+	* DEPENDS: switched to PYTHON (python3 supported)
+
 2013-01-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.4
 
