--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-09 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/pip: new spell, Python easy_install replacement
+
 2014-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* libs/libtcod: new spell, a library for developing roguelike games
 
