--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,7 @@
+2014-04-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9.1
+	  download from KERNEL
+
 2014-02-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.9.0
 
