--- a/crypto/ca-certificates/HISTORY
+++ b/crypto/ca-certificates/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20140325
+
 2014-03-13 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 20140223
 
