--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,7 @@
+2014-04-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.5.8
+	* PRE_BUILD: added
+
 2014-01-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.7
 
