--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.52
+
 2014-03-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.50
 
