--- a/devel/xmlto/HISTORY
+++ b/devel/xmlto/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 0.0.26
+
 2012-02-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.0.25
 
