--- a/perl-cpan/perl-error/HISTORY
+++ b/perl-cpan/perl-error/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.17022
+
 2013-06-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.17020
 
