--- a/video-libs/libdvdread/HISTORY
+++ b/video-libs/libdvdread/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@ourcemage.org>
+	* DETAILS: version 4.2.1
+
 2012-10-25 Treeve Jelbert <treeve@ourcemage.org>
 	* DETAILS: version 4.2.0
 	  new url
