--- a/python-pypi/formencode/HISTORY
+++ b/python-pypi/formencode/HISTORY
@@ -1,3 +1,7 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.0a1
+	* DEPENDS: python => PYTHON
+
 2013-05-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.6
 
