--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.3.2
+
 2014-01-20 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE, BUILD: allow building IpV4/6 support
 
