--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.5.4.1
+
 2014-02-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.5.3
 
