--- a/graphics-libs/libjpeg-turbo/HISTORY
+++ b/graphics-libs/libjpeg-turbo/HISTORY
@@ -1,3 +1,6 @@
+2014-04-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.3.1
+
 2013-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.0
 
