--- a/devel/byacc/HISTORY
+++ b/devel/byacc/HISTORY
@@ -1,3 +1,6 @@
+2014-04-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20140409
+
 2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20130925
 
