--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2014-04-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.53
+
 2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.51
 
