--- a/utils/run-parts/HISTORY
+++ b/utils/run-parts/HISTORY
@@ -1,3 +1,7 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.4
+	* BUILD: deleted
+
 2011-05-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.4.4
 
