--- a/libs/libcap/HISTORY
+++ b/libs/libcap/HISTORY
@@ -1,3 +1,9 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.24
+	* PRE_BUILD, INSTALL, *.patch: deleted
+	* BUILD: simplify
+	  builds & installs without PAM on amd64, linux 3.14.0
+
 2011-07-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.22
 
