gnu.gpg -add AE05B3E9: Patrick Alken

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-12  Treeve Jelbert <treeve@sourcemage.org>
+	* gnu.gpg: add key AE05B3E9:  "Patrick Alken <alken@colorado.edu>"
+
 2014-04-09 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/pip: new spell, Python easy_install replacement
 
