--- a/libs/gsl/HISTORY
+++ b/libs/gsl/HISTORY
@@ -1,3 +1,6 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.16
+
 2011-05-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.15
 
