--- a/libs/gdbm/HISTORY
+++ b/libs/gdbm/HISTORY
@@ -1,3 +1,6 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.11
+
 2011-11-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10
 
