--- a/libs/sdl2/HISTORY
+++ b/libs/sdl2/HISTORY
@@ -1,3 +1,7 @@
+2014-04-13 Treeve Jelbert <treeve@sourceamge.org>
+	* DETAILS: version 2.0.3
+	* PRE_BUILD: fix it
+
 2013-11-02 Robin Cook <rcook@wyrms.net>
 	* NEW SPELL: BUILD, CONFIGURE, DEPENDS, DETAILS, PRE_BUILD, PREPARE 
           PRE_SUB_DEPENDS, SUB_DEPENDS
