--- a/audio-libs/libvorbis/HISTORY
+++ b/audio-libs/libvorbis/HISTORY
@@ -1,3 +1,6 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.4
+
 2012-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.3
 
