--- a/libs/tbb/HISTORY
+++ b/libs/tbb/HISTORY
@@ -1,3 +1,6 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 42_20140122
+
 2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 42_20131118
 
