--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,7 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.8
+	  SECURITY_PATCH++ fix CVE-2014-0032
+
 2014-02-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.5
 	  SECURITY_PATCH++ fix CVE-2013-4505 CVE-2013-4558
