--- a/utils/file/HISTORY
+++ b/utils/file/HISTORY
@@ -1,3 +1,6 @@
+2014-03-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.18
+
 2013-12-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.16
 
