--- a/libs/readline/HISTORY
+++ b/libs/readline/HISTORY
@@ -1,3 +1,6 @@
+2014-04-12 Treevw Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.3
+
 2011-02-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.2
 
