--- a/fonts-x11/unifont/HISTORY
+++ b/fonts-x11/unifont/HISTORY
@@ -1,2 +1,5 @@
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 6.3.20140214
+
 2011-05-27 Arjan Bouter <abouter@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL, PRE_BUILD: spell created
