--- a/editors/gawk/HISTORY
+++ b/editors/gawk/HISTORY
@@ -1,3 +1,6 @@
+2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.1.1
+
 2013-05-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.1.0
 
