--- a/python-pypi/scons/HISTORY
+++ b/python-pypi/scons/HISTORY
@@ -1,3 +1,6 @@
+2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.3.1
+
 2012-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2.0
 
