--- a/http/serf/HISTORY
+++ b/http/serf/HISTORY
@@ -1,3 +1,8 @@
+2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.4
+	* DEPENDS: add scons, remove old options
+	* BUILD INSTALL: added, for scons
+
 2013-06-26 Javier Vasquez <j.e.vasquez.v@gmail.com>
 	* New spell
 
