--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.15.1
+
 2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.15.0
 	* DEPENDS: add presentproto, dri3proto, libxshmfence
