mesalib-1x-10.1.0 new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* graphics-libs/mesalib-1x: neww spell
+	  this supports mesalib >= 10.0
+
 2014-04-12  Treeve Jelbert <treeve@sourcemage.org>
 	* gnu.gpg: add key AE05B3E9:  "Patrick Alken <alken@colorado.edu>"
 
