mesalib - conflicts mesalib-1x

--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,7 @@
+2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
+	* PROVIDES: add MESALIB
+	* CONFLICTS: added, conflicts mesalib-1x
+
 2013-05-31 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: GLUT functionality depends on libxmu and libxi (plus libx11)
 
