--- a/http/eflwebkit/HISTORY
+++ b/http/eflwebkit/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2011-12-27 Robin Cook <rcook@wyms.net>
 	* PREPARE: changed to query branch
 	* DETAILS: modified for branch query
