--- a/http/webkitgtk3/HISTORY
+++ b/http/webkitgtk3/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2014-01-28 Robin Cook <rcook@wyrms.net>
         * DETAILS: updated to 2.2.4
         * DEPENDS: updated to new dependencies
