--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2014-01-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: pass path of freetype2 headers to cmake
 	* DEPENDS: add dep on jasper, optional dep on asio
