--- a/libs/sdl2/HISTORY
+++ b/libs/sdl2/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2014-04-13 Treeve Jelbert <treeve@sourceamge.org>
 	* DETAILS: version 2.0.3
 	* PRE_BUILD: fix it
