--- a/x11-toolkits/wxgtk/HISTORY
+++ b/x11-toolkits/wxgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2013-07-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, DEPENDS: version 2.8.12.1, add dependencies on libsm and libxinerama,
 	  use wxPython sources as these are more recent and contain the complete
