--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2013-10-08 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, CONFIGURE: deprecate XLOCKMORE_BO
 	* DEPENDS: added missing dependencies (required: libx11; optional:
