--- a/xorg-app/xdriinfo/HISTORY
+++ b/xorg-app/xdriinfo/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2011-03-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.0.4
 	  SOURCE matches upstream posted SHA1
