--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2013-02-25 Ismael Luceno <ismael.luceno@gmail.com>
 	* PRE_BUILD: Fix call to autogen.sh
 
