--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
