--- a/xorg-driver/xf86-video-r128/HISTORY
+++ b/xorg-driver/xf86-video-r128/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2009-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 6.8.1
 	  SOURCE matches upstream posted MD5
