--- a/xorg-driver/xf86-video-sis/HISTORY
+++ b/xorg-driver/xf86-video-sis/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2010-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.10.3
 	  SOURCE matches upstream posted SHA1
