xf86-video-tdfx - depends mesalib

--- a/xorg-driver/xf86-video-tdfx/HISTORY
+++ b/xorg-driver/xf86-video-tdfx/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2009-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.3
 	  SOURCE matches upstream posted MD5
