--- a/xorg-driver/xf86-video-via/HISTORY
+++ b/xorg-driver/xf86-video-via/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2008-06-28 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: removed nonexistant is_depends_enabled.function sourcing
 
