glu - depends mesalib

--- a/graphics-libs/glu/HISTORY
+++ b/graphics-libs/glu/HISTORY
@@ -1,2 +1,5 @@
+2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2012-09-01 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, DEPENDS, PREPERE, PRE_BUILD: spell created
