--- a/xorg-proto/xproto/HISTORY
+++ b/xorg-proto/xproto/HISTORY
@@ -1,4 +1,7 @@
-2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
+2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.0.26
+
+2013-11-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.0.25
 
 2012-04-06 Treeve Jelbert <treeve@sourcemage.org>
