--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Pass down ARFLAGS=rv, to workaround buildsystem bug
+
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depends on nss
 	* *SUB_DEPENDS: Allow forcing dependency on nss
