--- a/devel/fpc/HISTORY
+++ b/devel/fpc/HISTORY
@@ -1,3 +1,6 @@
+2014-04-14 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.6.4
+
 2013-04-21 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DETAILS, EXPORTS, INSTALL, PREPARE, PRE_BUILD,
 	  REPAIR^none^EXPORTS: updated spell to 2.6.2
