--- a/xorg-proto/fontsproto/HISTORY
+++ b/xorg-proto/fontsproto/HISTORY
@@ -1,3 +1,6 @@
+2014-04-15  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.3
+
 2012-04-17  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.2
 
