--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-15  Ismael Luceno <ismael@sourcemage.org>
+	* perl-cpan/parse-debcontrol: new spell, Easy OO parsing of debian control-like files
+
 2014-04-12  Treeve Jelbert <treeve@sourcemage.org>
 	* gnu.gpg: add key AE05B3E9:  "Patrick Alken <alken@colorado.edu>"
 
