file-desktopentry: depends on file-basedir

--- a/perl-cpan/file-desktopentry/HISTORY
+++ b/perl-cpan/file-desktopentry/HISTORY
@@ -1,3 +1,6 @@
+2014-04-15 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: depends on file-basedir
+
 2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.04
 
