--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,7 @@
+2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.24
+	* DEPENDS: added optional gtk+3 dependency
+
 2013-05-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.23.1
 
