--- a/devel/geany-plugins/HISTORY
+++ b/devel/geany-plugins/HISTORY
@@ -1,3 +1,7 @@
+2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.24
+	* DEPENDS, CONFIGURE: added new plugins
+
 2013-03-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.23
 	* DEPENDS: updated dependencies according to new/dropped plugins
