--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.1
+
 2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.0
 
