polipo: new spell, caching web proxy

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
+	* http/polipo: new spell, caching web proxy
+
 2014-04-15  Ismael Luceno <ismael@sourcemage.org>
 	* perl-cpan/parse-debcontrol: new spell, Easy OO parsing of debian control-like files
 
