--- a/python-pypi/fb-python/HISTORY
+++ b/python-pypi/fb-python/HISTORY
@@ -1,3 +1,6 @@
+2014-04-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.3
+
 2014-02-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.0
 
