devscripts: new spell, Debian developer scripts

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-16  Ismael Luceno <ismael@sourcemage.org>
+	* devel/devscripts: new spell, Debian developer scripts
+
 2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
 	* http/polipo: new spell, caching web proxy
 
