--- a/x11/slim/HISTORY
+++ b/x11/slim/HISTORY
@@ -1,3 +1,6 @@
+2014-04-17 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: fixed build with recent freetype2/cmake
+
 2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.6
 	* PRE_BUILD: apply patch
