--- a/graphics-libs/freetype2/HISTORY
+++ b/graphics-libs/freetype2/HISTORY
@@ -1,3 +1,6 @@
+2014-04-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5.3; SECURITY_PATCH++ (CVE-2014-2240)
+
 2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: libpng
 
