--- a/x11-libs/fontconfig/HISTORY
+++ b/x11-libs/fontconfig/HISTORY
@@ -1,3 +1,6 @@
+2014-04-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.11.1
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.11.0
 
