--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,6 @@
+2014-04-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.24.1
+
 2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.24
 	* DEPENDS: added optional gtk+3 dependency
