--- a/disk/isomaster/HISTORY
+++ b/disk/isomaster/HISTORY
@@ -1,3 +1,6 @@
+2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.11
+
 2012-07-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.9
 
