--- a/http/polipo/HISTORY
+++ b/http/polipo/HISTORY
@@ -1,3 +1,8 @@
+2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* init.d/polipo: implemented reload function to prevent exiting when
+	  HUP signal is sent
+
 2014-04-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, {PRE_,}BUILD, INSTALL, polipo.gpg, init.d/polipo:
 	  spell created
