--- a/http/nginx/HISTORY
+++ b/http/nginx/HISTORY
@@ -1,3 +1,7 @@
+2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* init.d/nginx: fixed logic bug
+
 2013-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++
 	* PRE_BUILD: apply patch
