--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,7 @@
+2014-04-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.46
+	* DEPENDS: lua51 -> LUA
+
 2013-08-20 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Fails to build with -Wl,--as-needed in LDFLAGS
 
