deprecate kde4/kdebindings4 [replaced by kde4-bindings-profile]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-18  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4/kdebindings4: spell deprecated [replaced by kde4-bindings-profile]
+ 
 2014-04-16 Ismael Luceno <ismael@sourcemage.org>
 	* devel/devscripts: new spell, Debian developer scripts
 
