--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,6 @@
+2014-04-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6
+
 2014-03-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.3
 	  change url
