--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.40.0
+
 2014-01-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.38.2
 
