--- a/devel/guile/HISTORY
+++ b/devel/guile/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.11
+
 2013-09-10 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 2.0.9
 
