--- a/gnome2-libs/glibmm/HISTORY
+++ b/gnome2-libs/glibmm/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.40.0
+
 2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.38.1
 
