--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.27
+
 2014-02-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.9.26
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: add sub dependency on graphite2
