--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.40.2
+
 2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: 2.40.1
 
