--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: stable version 3.1.0
+
 2014-02-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: stable version 3.0.1
 
