--- a/python-pypi/paramiko/HISTORY
+++ b/python-pypi/paramiko/HISTORY
@@ -1,3 +1,6 @@
+2014-04-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.13.0
+
 2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.12.2
 	* DEPENDS: requires python, python-ecdsa
