--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,3 +1,6 @@
+2014-04-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated 3rd branch to 3.3.0
+
 2014-02-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated 3rd branch to 3.2.5
 
