--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-04-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: libxml2 is optional
+
 2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.18.3.2
 
