--- a/devel/bluefish/HISTORY
+++ b/devel/bluefish/HISTORY
@@ -1,3 +1,6 @@
+2014-04-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.6
+
 2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.5
 
