--- a/disk/gnu-efi/HISTORY
+++ b/disk/gnu-efi/HISTORY
@@ -1,3 +1,6 @@
+2014-04-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0v
+
 2014-02-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* BUILD: clear CFLAGS
