syslog-ng - more depends

--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2014-04-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional json-c, PYTHON
+
 2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.5.4.1
 
