--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2014-04-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.10.7, SECURITY_PATCH=48
+
 2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.10.5
 
