--- a/ftp/ncdc/HISTORY
+++ b/ftp/ncdc/HISTORY
@@ -1,3 +1,6 @@
+2014-04-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.19.1
+
 2014-02-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.19
 	* DEPENDS: added optional geoip support
