--- a/ftp/rsync/HISTORY
+++ b/ftp/rsync/HISTORY
@@ -1,3 +1,6 @@
+2014-04-24 Treeve Jelbert <treev@pi.be>
+	* DETAILS: version 3.1.0
+
 2011-09-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.9
 
