--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,8 @@
+2014-04-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.27 (stable); SECUIRTY_PATCH++
+	  (CVE-2013-7345)
+	* DEPENDS: added intl enable/disable flags for icu
+
 2014-03-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.26 (stable); SECUIRTY_PATCH++
 	  (CVE-2014-1943, CVE-2014-2270)
