--- a/disk/lilo/HISTORY
+++ b/disk/lilo/HISTORY
@@ -1,3 +1,9 @@
+2014-04-25 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: added option to apply XVD patch
+	* PRE_BUILD: apply patch
+	* xvd.patch: added, patch by Lloyd Richardson <lloyd@drlabs.org> and
+	  Bostjan Skufca <bostjan@a2o.si> for Xen XVD disks recognition
+
 2013-08-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 24.0
 	* PRE_BUILD, 0001-fix-failure-during-install.patch: fix failure during install
