--- a/utils/smem/HISTORY
+++ b/utils/smem/HISTORY
@@ -1,3 +1,6 @@
+2014-04-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3
 
