--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2014-04-27 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 6.8.9-0
+
 2014-03-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 6.8.8-8
 	* DEPENDS: add optional dependencies on jbigkit, openjpeg,
