--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,9 @@
+2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.3.8
+	* DEPENDS: lua is _optional_; updated/added flags; updated xf86vm flag;
+	  libxext becomes optional; added libguess, sdl2 optional deps
+	* CONFIGURE: added missing flags, new configure options
+
 2014-04-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: depend on lua instead of LUA
 
