optipng: fixed man directory

--- a/graphics/optipng/HISTORY
+++ b/graphics/optipng/HISTORY
@@ -1,3 +1,7 @@
+2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* BUILD: fixed man directory
+
 2014-03-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.5
 
