--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.14.2: added
+	* latest_defaults: version 3.14.2
+
 2014-04-15 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=3.14, LATEST_3=3.14
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.14.1
