--- a/devel/git-cola/HISTORY
+++ b/devel/git-cola/HISTORY
@@ -1,3 +1,6 @@
+2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.0.2
+
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.0.1
 
