--- a/net/ipsec-tools/HISTORY
+++ b/net/ipsec-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.2
+
 2013-10-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.8.1; added missing docs
 	* DEPENDS: added missing optional dependencies
