--- a/ftp/uget/HISTORY
+++ b/ftp/uget/HISTORY
@@ -1,3 +1,8 @@
+2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.10.4; updated website
+	* DEPENDS: added gnutls optional dependency
+	* BUILD: added, to fix linker error when gnutls is enabled
+
 2013-01-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.10.3
 
