--- a/mobile/laptop-mode-tools/HISTORY
+++ b/mobile/laptop-mode-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-04-27 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.64
+
 2012-04-28 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.60
 
