libs/gflags: version 2.1.1

--- a/libs/gflags/HISTORY
+++ b/libs/gflags/HISTORY
@@ -1,2 +1,6 @@
+2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.1.1
+	* DEPENDS, BUILD: use cmake
+
 2013-01-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS: spell created
