libs/vsqlite++: new spell, C++ bindings for sqlite3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* libs/vsqlite++: new spell, C++ bindings for sqlite3
+
 2014-04-18  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/kdebindings4: spell deprecated [replaced by kde4-bindings-profile]
  
