--- a/haskell/haskell-mtl/HISTORY
+++ b/haskell/haskell-mtl/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.1.3.1
+
 2012-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.1.2
 
