--- a/haskell/haskell-dataenc/HISTORY
+++ b/haskell/haskell-dataenc/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.14.0.7
+
 2013-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
