--- a/mail/exim/HISTORY
+++ b/mail/exim/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: fixed priority for gdbm
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFLICTS: added msmtp
 
