--- a/disk/davfs/HISTORY
+++ b/disk/davfs/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5.0
+
 2012-07-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.7
 
