--- a/disk/gdisk/HISTORY
+++ b/disk/gdisk/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 0.8.10
+
 2014-02-02 Treeve Jelbert <treeve@souremage.org>
 	* DETAILS: version 0.8.8
 	* DEPENDS: add ncurses, util-linux
