--- a/libs/gflags/HISTORY
+++ b/libs/gflags/HISTORY
@@ -1,3 +1,6 @@
+2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: change SOURCE_URL[0] to github
+
 2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.1.1
 	* DEPENDS, BUILD: use cmake
