crypto/nss: versions 3.14.5, 3.16, remove obsolete branches

--- a/crypto/nss/INSTALL
+++ b/crypto/nss/INSTALL
@@ -1,8 +1,8 @@
 if [ "$NSS_BRANCH" == "DEFAULT" ]; then
-  NSS_BRANCH=3.15
+  NSS_BRANCH=3.16
 fi &&
 
-if [[ $NSS_BRANCH == "3.15" ]]; then
+if [[ $NSS_BRANCH == "3.15" || $NSS_BRANCH == "3.16" ]]; then
   cd $SOURCE_DIRECTORY/dist
 else
   cd $SOURCE_DIRECTORY/mozilla/dist
@@ -19,7 +19,7 @@ install -v -m755 */lib/*.chk $INSTALL_ROOT/usr/lib &&
 install -v -m755 */lib/*.a $INSTALL_ROOT/usr/lib &&
 
 install -v -d -m755 $INSTALL_ROOT/usr/lib/pkgconfig &&
-if [[ $NSS_BRANCH == "3.15" ]]; then
+if [[ $NSS_BRANCH == "3.15" || $NSS_BRANCH == "3.16" ]]; then
   install -v -m644 */lib/pkgconfig/nss.pc $INSTALL_ROOT/usr/lib/pkgconfig
 else
   install -v -m644 ../security/nss/cmd/disttools/nss.pc $INSTALL_ROOT/usr/lib/pkgconfig
@@ -27,7 +27,10 @@ fi &&
 
 install -v -d -m755 $INSTALL_ROOT/usr/bin &&
 install -v -m755 */bin/* $INSTALL_ROOT/usr/bin &&
-if [[ $NSS_BRANCH != "3.15" ]]; then
+
+if [[ $NSS_BRANCH == "3.16" ]]; then
+  install -v -m755 ../nss/config/nss-config $INSTALL_ROOT/usr/bin
+elif [[ $NSS_BRANCH == "3.15" ]]; then
   install -v -m755 ../security/nss/cmd/disttools/nss-config $INSTALL_ROOT/usr/bin
 fi &&
 
