--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,7 @@
+2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, SUB_DEPENDS, PRE_BUILD, BUILD, DEPENDS, PRE_SUB_DEPENDS:
+	  remove obsolete branches, add 3.16 branch, update 3.14 branch to 3.14.5
+
 2014-03-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.15.5
 
