http/firefox: version 29.0

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,8 @@
+2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 29.0
+	* DEPENDS: depend on nss 3.16
+	* install_dir.patch: renewed
+
 2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 28.0
 	* DETAILS, PREPARE: removed support for cvs version since there hasn't been
