--- a/utils/htop/HISTORY
+++ b/utils/htop/HISTORY
@@ -1,3 +1,6 @@
+2014-04-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.3, WEB_SITE and SOURCE_URL[0] updated
+
 2012-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.2
 
