--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2014-04-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.8.3
+
 2013-10-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.2
 
