--- a/python-pypi/django/HISTORY
+++ b/python-pypi/django/HISTORY
@@ -1,3 +1,6 @@
+2014-04-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.11; SECURITY_PATCH++
+
 2013-02-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.4; SECURITY_PATCH++
 
