--- a/editors/texmaker/HISTORY
+++ b/editors/texmaker/HISTORY
@@ -1,3 +1,6 @@
+2014-04-29 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.1.1
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependency on gcc with CXX and qt4 with SQLITE
 
