--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.9.0
+
 2013-10-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.8.2
 	* PRE_BUILD, 0001-remove-libffi.patch: add patch to remove
