proxychains-ng: new spell, TCP and DNS through proxy server

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-30 Vlad Glagolev <stealth@sourcemage.org>
+	* net/proxychains-ng: new spell, TCP and DNS through proxy server
+
 2014-04-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* libs/vsqlite++: new spell, C++ bindings for sqlite3
 
