--- a/haskell/haskell-haskeline/HISTORY
+++ b/haskell/haskell-haskeline/HISTORY
@@ -1,3 +1,6 @@
+2014-04-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.7.1.2
+
 2013-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
