--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2014-05-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.9
+
 2014-04-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.3.8
 	* DEPENDS: lua is _optional_; updated/added flags; updated xf86vm flag;
