--- a/editors/emacs/HISTORY
+++ b/editors/emacs/HISTORY
@@ -1,3 +1,6 @@
+2014-05-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 24.3
+
 2013-07-31 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Updated optional depedencies
 	Fixed typo
