--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.54
+
 2014-04-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.53
 
