--- a/haskell/haskell-stm/HISTORY
+++ b/haskell/haskell-stm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.4.3
+
 2014-01-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.4.2
 
