--- a/haskell/haskell-async/HISTORY
+++ b/haskell/haskell-async/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: add dependency on haskell-stm
+
 2014-01-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.0.1.5
 
