--- a/haskell/haskell-unordered-containers/HISTORY
+++ b/haskell/haskell-unordered-containers/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.2.4.0
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.2.3.3
 
