--- a/haskell/haskell-attoparsec/HISTORY
+++ b/haskell/haskell-attoparsec/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11.3.0
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, DEPENDS: version 0.11.1.0
 
