--- a/haskell/haskell-aeson/HISTORY
+++ b/haskell/haskell-aeson/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, DEPENDS: version 0.7.0.3
+
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, DEPENDS: version 0.7.0.1
 
