--- a/wm-addons/xmonad-contrib/HISTORY
+++ b/wm-addons/xmonad-contrib/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11.3
+
 2013-09-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11.2
 
