--- a/haskell/haskell-missingh/HISTORY
+++ b/haskell/haskell-missingh/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.1.0
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.0.2
 
