libs/ncurses: add libtinfo symlink

--- a/libs/ncurses/HISTORY
+++ b/libs/ncurses/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* INSTALL: create libtinfo symlink
+
 2012-10-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: PATCHLEVEL=1
 	* BUILD: --enable-pc-files added
