devel/ghc: version 7.8.2

--- a/devel/ghc/HISTORY
+++ b/devel/ghc/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: version 7.8.2
+
 2013-05-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: version 7.6.3
 
