--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-05-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.5
+
 2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4.1
 
