--- a/python-pypi/alembic/HISTORY
+++ b/python-pypi/alembic/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 0.6.5
+
 2014-03-29 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 0.6.4
 
