gummiboot - add a splash screen

--- a/disk/gummiboot/HISTORY
+++ b/disk/gummiboot/HISTORY
@@ -1,3 +1,6 @@
+2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
+	* INSTALL, smgl-splash.bmp.xz: provide splash screen
+
 2014-03-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 44
 	* CONFLICTS: added
