--- a/python-pypi/isort/HISTORY
+++ b/python-pypi/isort/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.8.0
+
 2014-03-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.6.2
 
