--- a/haskell/happy/HISTORY
+++ b/haskell/happy/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.19.3
+
 2013-03-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.18.10
 
