--- a/haskell/haskell-case-insensitive/HISTORY
+++ b/haskell/haskell-case-insensitive/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.0.0
+
 2014-02-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
