haskell/haskell-tf-random: new spell, a high-quality splittable pseudorandom number generator

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-tf-random: new spell, a high-quality splittable
+	  pseudorandom number generator
+
 2014-04-30 Vlad Glagolev <stealth@sourcemage.org>
 	* net/proxychains-ng: new spell, TCP and DNS through proxy server
 
