libreswan: new spell, IPsec implementation for Linux - Openswan fork

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-06 Vlad Glagolev <stealth@sourcemage.org>
+	* net/libreswan: new spell, IPsec implementation for Linux - Openswan
+	  fork
+
 2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-tf-random: new spell, a high-quality splittable
 	  pseudorandom number generator
