--- a/chat-im/mcabber/HISTORY
+++ b/chat-im/mcabber/HISTORY
@@ -1,3 +1,10 @@
+2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.10.3; converted to upstream signature
+	  checking
+	* mcabber.gpg: added ACB7FC95 public key (Mikael BERTHE (MiKael)
+	  <mikael.berthe@lilotux.net>)
+	* PRE_BUILD, mcabber_use_libotr4.patch: dropped, fixed by upstream
+
 2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, PRE_BUILD, mcabber_use_libotr4.patch: fix build with libotr >= 4.0.0,
 	  patch is from Debian
