devel/llvm: version 3.4.1

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: version 3.4.1
+
 2014-03-26 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: SOURCE3 was updated to upstream
 	* PRE_BUILD: corrected clang directory name change,
