ldns: added openssl warn and perl opt dep

--- a/libs/ldns/HISTORY
+++ b/libs/ldns/HISTORY
@@ -1,5 +1,7 @@
 2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.17
+	* DEPENDS: added warning on switching openssl branches; added perl
+	  optional dependency
 
 2012-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6.16
