windowmanagers/herbstluftwm: version 0.6.2

--- a/windowmanagers/herbstluftwm/HISTORY
+++ b/windowmanagers/herbstluftwm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.6.2
+
 2013-06-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, PRE_BUILD, DEPENDS, DETAILS: spell created
 
