windowmanagers/openbox: version 3.5.2

--- a/windowmanagers/openbox/HISTORY
+++ b/windowmanagers/openbox/HISTORY
@@ -1,3 +1,6 @@
+2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.5.2
+
 2011-08-11 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 3.5.0
 	* DEPENDS: requires subdependency X for pango,
