windowmanagers/xmonad: moved to haskell/haskell-xmonad

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* windowmanagers/xmonad: spell deprecated [integrate into the grimoire's
+	  haskell build facilities]
+
 2014-05-06 Vlad Glagolev <stealth@sourcemage.org>
 	* net/libreswan: new spell, IPsec implementation for Linux - Openswan
 	  fork
