--- a/haskell/haskell-xmonad/HISTORY
+++ b/haskell/haskell-xmonad/HISTORY
@@ -1,7 +1,5 @@
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* spell deprecated [integrate into the grimoire's haskell build facilities]
-	* PATCHLEVEL=9999
-	* DETAILS: version 0
+	* CONFLICTS: conflict with xmonad
 
 2013-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: install manpage
