--- a/windowmanagers/xmonad/INSTALL
+++ b/windowmanagers/xmonad/INSTALL
@@ -1,5 +1,1 @@
-runhaskell Setup.lhs install &&
-SHARE_DIR=${INSTALL_ROOT}/usr/share/${SPELL} &&
-mkdir -vp $SHARE_DIR &&
-cp -v xmonad.cabal $SHARE_DIR &&
-install -m644 ${SOURCE_DIRECTORY}/man/xmonad.1 ${INSTALL_ROOT}/usr/share/man/man1/
+true
