wm-addons/xmonad-contrib: moved to haskell/haskell-xmonad-contrib

--- a/wm-addons/xmonad-contrib/INSTALL
+++ b/wm-addons/xmonad-contrib/INSTALL
@@ -1,4 +1,1 @@
-runhaskell Setup.lhs install &&
-SHARE_DIR=${INSTALL_ROOT}/usr/share/${SPELL} &&
-mkdir -vp $SHARE_DIR &&
-cp -v xmonad-contrib.cabal $SHARE_DIR
+true
