--- a/haskell/haskell-xmonad-contrib/HISTORY
+++ b/haskell/haskell-xmonad-contrib/HISTORY
@@ -1,7 +1,5 @@
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* spell deprecated [renamed to haskell-xmonad-contrib]
-	* PATCHLEVEL=9999
-	* DETAILS: version 0
+	* CONFLICTS: conflict with xmonad-contrib
 
 2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11.3
