devel/llvm: install static analyzer to /usr/bin

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* INSTALL: install static analyzer to /usr/bin
+
 2014-05-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: version 3.4.1
 	* PRE_BUILD, gcc-4.9.patch: fix error when using gcc 4.9's stdlib
