--- a/devel/llvm/INSTALL
+++ b/devel/llvm/INSTALL
@@ -7,14 +7,13 @@ then
   cd $SOURCE_DIRECTORY/tools/clang/tools &&
 
   install -v -m 0755 -o root -g root -d "$target/scan-build" &&
-  install -v -m 0755 -o root -g root -t "$target/scan-build" scan-build/ccc-analyzer &&
-  install -v -m 0755 -o root -g root -t "$target/scan-build" scan-build/scan-build &&
-  install -v -m 0755 -o root -g root -t "$target/scan-build" scan-build/ccc-analyzer &&
-  ln -sf "ccc-analyzer" "$target/scan-build/c++-analyzer" &&
+  install -v -m 0755 -o root -g root -t "${INSTALL_ROOT}/usr/bin/" scan-build/ccc-analyzer &&
+  install -v -m 0755 -o root -g root -t "${INSTALL_ROOT}/usr/bin/" scan-build/scan-build &&
+  ln -sf "/usr/bin/ccc-analyzer" "${INSTALL_ROOT}/usr/bin/c++-analyzer" &&
   install -v -m 0644 -o root -g root -t "$target/scan-build" scan-build/scanview.css &&
   install -v -m 0644 -o root -g root -t "$target/scan-build" scan-build/sorttable.js &&
   install -v -m 0755 -o root -g root -d "$target/scan-view" &&
-  install -v -m 0755 -o root -g root -t "$target/scan-view" scan-view/scan-view &&
+  install -v -m 0755 -o root -g root -t "${INSTALL_ROOT}/usr/bin/" scan-view/scan-view &&
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/Reporter.py &&
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/ScanView.py &&
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/startfile.py
