devel/llvm: fix search paths in scan-build and scan-view

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,5 +1,6 @@
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: install static analyzer to /usr/bin
+	* PRE_BUILD: fix search paths in scan-build and scan-view
 
 2014-05-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: version 3.4.1
