file-copy-recursive: new spell, Perl extension for recursively copying files and directories

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-10  Ismael Luceno <ismael@sourcemage.org>
+	* perl-cpan/file-copy-recursive: new spell, Perl extension for recursively copying files and directories
+
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* windowmanagers/xmonad: spell deprecated [integrate into the grimoire's
 	  haskell build facilities]
