imapsync: Depends on file-copy-recursive

--- a/ftp/imapsync/HISTORY
+++ b/ftp/imapsync/HISTORY
@@ -1,4 +1,5 @@
 2014-05-10 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on file-copy-recursive
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 1.584
 
