extra-cmake-modules: => 0.0.13

--- a/devel/extra-cmake-modules/HISTORY
+++ b/devel/extra-cmake-modules/HISTORY
@@ -1,3 +1,6 @@
+2014-05-12  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.0.13/4.99.0
+
 2014-03-04  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.0.11/4.97.0
 
