--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,8 @@
+2014-05-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.5.36 (5.5 branch); added mirror for 5.5
+	  branch; cleaned up
+	* CONFIGURE: added config option for tmp tables
+
 2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
 	* UP_TRIGGERS: update triggers for switching between branches
 
