devel/cppcheck: version 1.65

--- a/devel/cppcheck/HISTORY
+++ b/devel/cppcheck/HISTORY
@@ -1,3 +1,6 @@
+2014-05-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.65
+
 2014-05-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.64
 
