--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2014-05-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.14.4: added
+	* latest_defaults: version 3.14.4
+	* DETAILS: SECURITY_PATCH=1 fixes CVE-2014-0196
+
 2014-05-07 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.14.3
 	* info/patches/maintenance_patches_3/patch-3.14.3: added
