getmail: post-update fixes

--- a/mail/getmail/HISTORY
+++ b/mail/getmail/HISTORY
@@ -1,3 +1,8 @@
+2014-05-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: don't do useless doc'ing
+	* BUILD, INSTALL: use functions
+	* DEPENDS: python -> PYTHON
+
 2014-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 4.46.0
 
