--- a/kernels/kmod/HISTORY
+++ b/kernels/kmod/HISTORY
@@ -1,3 +1,7 @@
+2014-05-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 17
+	* DEPENDS: add optional PYTHON
+
 2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 15
 
