doc/man-pages: version 3.66

--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2014-05-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.66
+
 2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.54
 
