--- a/utils/iozone/HISTORY
+++ b/utils/iozone/HISTORY
@@ -1,3 +1,7 @@
+2014-05-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3_424; don't do useless doc'ing
+	* INSTALL: verbosity++; install fileop and pit_server
+
 2011-05-20 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 3_397
 
