readline - tweak install (cherry picked from commit da5a26f03c88b04d03e22961a9eea1665d7ef54c)

--- a/libs/readline/HISTORY
+++ b/libs/readline/HISTORY
@@ -1,4 +1,7 @@
-2014-04-12 Treevw Jelbert <treeve@sourcemage.org>
+2014-05-16 Treeve Jelbert <treeve@sourcemage.org>
+	* INSTAALL: add ldconfig, otherwise next spell fails
+
+2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.3
 
 2011-02-15 Ladislav Hagara <hgr@vabo.cz>
