--- a/libs/readline/INSTALL
+++ b/libs/readline/INSTALL
@@ -10,4 +10,5 @@ if [[ "$INSTALL_INPUTRC" == y ]]; then
   mkdir -p  "$INSTALL_ROOT/etc/profile.d"                       &&
   install -vm 755  "$SPELL_DIRECTORY/etc/profile.d/readline.sh"  \
                   "$INSTALL_ROOT/etc/profile.d"
-fi
+fi &&
+ldconfig
