http/webkitgtk: updated to 2.4.2

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-05-16 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.4.2
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
