--- a/python-pypi/bpython/HISTORY
+++ b/python-pypi/bpython/HISTORY
@@ -1,3 +1,7 @@
+2014-05-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.13
+	* DEPENDS: added curtsies suggest dependency
+
 2013-01-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.12
 
