devel/llvm: add support for the lldb debugger

--- a/devel/llvm/INSTALL
+++ b/devel/llvm/INSTALL
@@ -1,5 +1,7 @@
 default_install &&
 
+install -v -m 0644 -o root -g root -t "${INSTALL_ROOT}/usr/share/man/man7/" docs/re_format.1
+
 if [[ "$LLVM_WITH_ANALYZER" == "y" ]]
 then
   target="$INSTALL_ROOT/usr/share/llvm" &&
@@ -17,4 +19,11 @@ then
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/Reporter.py &&
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/ScanView.py &&
   install -v -m 0644 -o root -g root -t "$target/scan-view" scan-view/startfile.py
+
+  install -v -m 0644 -o root -g root -t "${INSTALL_ROOT}/usr/share/man/man1/" scan-build/scan-build.1
+fi &&
+
+if [[ "$LLVM_WITH_LLDB" == y ]]; then
+  cd ${SOURCE_DIRECTORY} &&
+  install -v -m 0644 -o root -g root -t "${INSTALL_ROOT}/usr/share/man/man1/" tools/lldb/docs/lldb.1
 fi
