--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,7 @@
+2014-05-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS, DETAILS, INSTALL, PREPARE, PRE_BUILD: add suppport
+	  for the lldb debugger
+
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: install static analyzer to /usr/bin
 	* PRE_BUILD: fix search paths in scan-build and scan-view
