xf86-video-ati: SCM branch depends on glamor

--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2014-05-23 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: SCM branch depends on glamor
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
