--- a/python-pypi/pyxattr/HISTORY
+++ b/python-pypi/pyxattr/HISTORY
@@ -1,3 +1,6 @@
+2014-05-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.3
+
 2014-02-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.2
 	* PRE_BUILD: added, suppress error messages
