--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,6 @@
+2014-05-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version to 2.24.2
+
 2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated aes version to 2.24; updated aes patch to 20131026
 	* BUILD: readability++; disable nologin (provided by shadow); disable
