devel/splint: fix dependency in Makefile.in

--- a/devel/splint/HISTORY
+++ b/devel/splint/HISTORY
@@ -1,3 +1,7 @@
+2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0001-fix-dependencies-in-Makefile.in.patch, DEPENDS:
+	  fix dependency in Makefile.in
+
 2008-05-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 3.1.2, corrected WEB_SITE.
 	* BUILD: Replaced ./configure && make with default_build,
