libs/glibc: version 2.19

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,8 @@
+2014-05-24 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.19, .bz2 -> .xz
+	* PRE_BUILD, as-test-x.patch, glibc-2.17-sync-with-linux37.patch: removed obsolete patches
+	* glibc.gpg: new key, 6C2A4AFF, Carlos O'Donell's key again
+
 2014-02-15 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, PRE_BUILD: Use .xz files for 3.x kernels, .bz2 missing
 	  for newer versions.
