--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,9 @@
+2014-05-26 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.20.0
+
+2014-05-17 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.19.0
+
 2014-02-16 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.18.1
 
