--- a/devel/perl/HISTORY
+++ b/devel/perl/HISTORY
@@ -1,3 +1,7 @@
+2014-05-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.20.0
+	* INSTALL: remove obsoolete options
+
 2014-05-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.18.2
 	* BUILD: remove make_single
