--- a/devel/perl/INSTALL
+++ b/devel/perl/INSTALL
@@ -1,6 +1,4 @@
-make install DESTDIR=$INSTALL_ROOT \
-  INSTALLFLAGS="--man1dir=$INSTALL_ROOT/usr/share/man/man1 --man1ext=1 \
-  --man3dir=$INSTALL_ROOT/usr/share/man/man3 --man3ext=3" &&
+make install DESTDIR=$INSTALL_ROOT &&
 
 # for compatibility (irssi)
 for dynadir in $(ls -d $INSTALL_ROOT/usr/lib/perl5/$VERSION/*/auto); do
