mail/claws-mail: updated to 3.10.0

--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,7 @@
+2014-05-27 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 3.10.0, fixed SOURCE_URL, .bz2 -> .xz
+	* DEPENDS: removed db
+
 2014-01-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 3.9.3
 	* DEPENDS: updated to new depends
