doc/man-pages: version 3.68

--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2014-05-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.68
+
 2014-05-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.66
 
