giflib - provides GIFLIB

--- a/graphics-libs/giflib/HISTORY
+++ b/graphics-libs/giflib/HISTORY
@@ -1,3 +1,7 @@
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* PROVIDES: added
+	* CONFLICTS: conflict giflib5
+
 2014-02-25 Remko van der Vossen
 	* DEPENDS, PRE_BUILD: xmlto can shove it
 	* DETAILS: use sane sourceforge url
