fontforge - depends GIFLIB

--- a/graphics/fontforge/HISTORY
+++ b/graphics/fontforge/HISTORY
@@ -1,4 +1,7 @@
-204-03-26 Treeve Jelbert <treeve@sourcemage.org>
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
+2014-03-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20120731-b
 	* BUILD: deleted
 	* PRE_BUILD: do not apply patch
