KDE_DEPENDS - dpends GIFLIB

--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,3 +1,6 @@
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* KDE_DEPENDS: giflib => GIFLIB
+
 2013-07-11 Eric Sandall <sandalle@sourcemage.org>
 	* KDE_DEPENDS: Add kdepimlibs4 case
 	  Default case causes circular dependency with kdebase4-runtime
