evas - change depends giflib => GIFLIB

--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-09-06 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Replaced xorg-libs with libsm and libx11
 
