mplayer2 - change depends giflib => GIFLIB

--- a/video/mplayer2/HISTORY
+++ b/video/mplayer2/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2012-11-04 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD, CONFIGURE, DEPENDS: fixed the scm build
 	* INSTALL: install no man pages for scm branch
