anyrename - change depends giflib => GIFLIB

--- a/utils/anyrename/HISTORY
+++ b/utils/anyrename/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2008-07-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: depends on giflib, provider deprecated
 
