libgdiplus - change depends giflib => GIFLIB

--- a/libs/libgdiplus/HISTORY
+++ b/libs/libgdiplus/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2011-02-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.10
 
