- change depends giflib => GIFLIB

--- a/java/icedtea7/HISTORY
+++ b/java/icedtea7/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-09-08 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: changed to build with new automake
 
