btrfs-progs: Upstream fixed manpage's Makefile

--- a/disk/btrfs-progs/HISTORY
+++ b/disk/btrfs-progs/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Upstream fixed manpage's Makefile
+
 2012-05-26 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Fixed compilation
 	* DEPENDS: Added dependency on acl and e2fsprogs
