http/webkitgtk: version 2.4.3

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,8 @@
+2014-06-05 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 2.4.3
+	* BUILD: added missing header fix
+	* gtk-doc.patch, opengl-headers.patch: removed unused files
+
 2014-05-16 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.2
 
