wm-addons/i3lock: install manpage

--- a/wm-addons/i3lock/HISTORY
+++ b/wm-addons/i3lock/HISTORY
@@ -3,6 +3,7 @@
 	* DEPENDS: add dependencies on libev, libxcb, libx11, libxkbfile,
 	  libxkbcommon, make dependency on cairo mandatory
 	* BUILD: use default_build_make
+	* INSTALL: install manpage
 
 2012-06-02 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 2.4.1
