--- a/disk/ntfs-3g/HISTORY
+++ b/disk/ntfs-3g/HISTORY
@@ -1,3 +1,6 @@
+2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2014.02.15
+
 2013-01-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2013.1.13
 
