video/xbmc: version 13.1

--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2014-06-06 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 13.1 Gotham
+
 2014-05-11 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 13.0_r2 Gotham
 
