--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,9 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: 5.0
+	* DEPENDS: fix UDEV, gtk+2 => gtk+3, add fftw, remove hal, add orc
+	  gettedxt is nneded in order to build .desktop files
+	* PRE_BUILD: remove Werror flag from configure
+
 2014-01-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.0
 
