--- a/net/mdnsresponder/HISTORY
+++ b/net/mdnsresponder/HISTORY
@@ -1,3 +1,10 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 544
+	  update url
+	* BUILD: use make_single
+	* DEPENDS: added
+	* PRE_BUILD: added, to fix build
+
 2012-05-30 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 333.10
 	* BUILD: no longer fails to build with multiple make jobs
