x11/conky: add bug fixes from gentoo

--- a/x11/conky/HISTORY
+++ b/x11/conky/HISTORY
@@ -1,5 +1,14 @@
 2014-06-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_URL[0]
+	* PRE_BUILD, 
+	  conky-1.8.1-utf8-scroll.patch,
+	  conky-1.9.0-apcupsd.patch,
+	  conky-1.9.0-default-graph-size.patch,
+	  conky-1.9.0-diskio-dmmajor.patch,
+	  conky-1.9.0-lines-fix.patch,
+	  conky-1.9.0-ncurses.patch,
+	  conky-1.9.0-update-when-message-count-decreases.patch:
+	  add bug fixes from gentoo
 
 2013-02-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* CONFIGURE: add optional support for hdd temperature, per task
