--- a/security/knock/HISTORY
+++ b/security/knock/HISTORY
@@ -1,3 +1,8 @@
+2014-06-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7
+	* INSTALL, init.d/knock.conf: removed man1 -> man8
+	* PRE_BUILD: removed
+
 2013-08-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.6
 	* DEPENDS: made libpcap optional
