crypto/nss: version 3.16.1

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 3.16.1
+
 2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, SUB_DEPENDS, PRE_BUILD, BUILD, DEPENDS, PRE_SUB_DEPENDS:
 	  remove obsolete branches, add 3.16 branch, update 3.14 branch to 3.14.5
